WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275714
Unreviewed, internal build fix after
280217@main
https://bugs.webkit.org/show_bug.cgi?id=275714
Summary
Unreviewed, internal build fix after 280217@main
Yusuke Suzuki
Reported
2024-06-20 15:37:17 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2024-06-20 15:37:23 PDT
<
rdar://problem/130236241
>
Yusuke Suzuki
Comment 2
2024-06-20 15:38:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30023
EWS
Comment 3
2024-06-20 15:42:29 PDT
Committed
280225@main
(4e2c2da3251d): <
https://commits.webkit.org/280225@main
> Reviewed commits have been landed. Closing PR #30023 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug