Unreviewed, internal build fix after 280217@main https://bugs.webkit.org/show_bug.cgi?id=275714 rdar://130236241

* Source/WebKit/Shared/RemoteLayerTree/DynamicContentScalingImageBufferBackend.h:

Canonical link: https://commits.webkit.org/280225@main